build_fail_6.txt
[DEBUG build_start] Build function started (session: A)
[DEBUG target_optimize_setup] Target and optimize options set (session: A)
[DEBUG build_complete] Build function completed successfully (session: A)
install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 8 errors
src\editor\main_editor_tui.zig:42:21: error: expected type '[*:0]const u8', found '[]u8'
    raylib.drawText(command_text, @intFromFloat(content_rect.x + 25), @intFromFloat(prompt_y), 16, raylib.Color.white);
                    ^~~~~~~~~~~~
src\raylib_stub.zig:472:23: note: parameter type declared here
pub fn drawText(text: [*:0]const u8, posX: c_int, posY: c_int, fontSize: c_int, color: Color) void {
                      ^~~~~~~~~~~~~
referenced by:
    render: src\editor\main_editor.zig:325:43
    main: src\editor.zig:61:26
    4 reference(s) hidden; use '-freference-trace=6' to see all references
src\editor\material_node_editor.zig:184:33: error: expected type '[*:0]const u8', found '[]const u8'
                raylib.drawText(item, @intFromFloat(item_rect.x + 10), @intFromFloat(item_rect.y + 5), 14, raylib.Color.white);
                                ^~~~
src\raylib_stub.zig:472:23: note: parameter type declared here
pub fn drawText(text: [*:0]const u8, posX: c_int, posY: c_int, fontSize: c_int, color: Color) void {
                      ^~~~~~~~~~~~~
src\property_inspector.zig:204:25: error: member function expected 5 argument(s), found 4
        current_y = self.drawFloatProperty("Width", x, current_y, width);
                    ~~~~^~~~~~~~~~~~~~~~~~
src\property_inspector.zig:314:5: note: function declared here
    fn drawFloatProperty(_: *PropertyInspector, name: []const u8, value: f32, x: f32, y: f32, width: f32) f32 {
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\property_inspector.zig:219:25: error: member function expected 5 argument(s), found 4
        current_y = self.drawFloatProperty("Metallic", x, current_y, width);
                    ~~~~^~~~~~~~~~~~~~~~~~
src\property_inspector.zig:314:5: note: function declared here
    fn drawFloatProperty(_: *PropertyInspector, name: []const u8, value: f32, x: f32, y: f32, width: f32) f32 {
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\property_inspector.zig:241:25: error: member function expected 5 argument(s), found 4
        current_y = self.drawFloatProperty("Intensity", x, current_y, width);
                    ~~~~^~~~~~~~~~~~~~~~~~
src\property_inspector.zig:314:5: note: function declared here
    fn drawFloatProperty(_: *PropertyInspector, name: []const u8, value: f32, x: f32, y: f32, width: f32) f32 {
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\property_inspector.zig:276:25: error: expected type '[*:0]const u8', found '[]const u8'
        raylib.drawText(name, @intFromFloat(x + 5), @intFromFloat(y + 5), 12, raylib.Color.gray);
                        ^~~~
src\raylib_stub.zig:472:23: note: parameter type declared here
pub fn drawText(text: [*:0]const u8, posX: c_int, posY: c_int, fontSize: c_int, color: Color) void {
                      ^~~~~~~~~~~~~
src\property_inspector.zig:309:25: error: expected type '[*:0]const u8', found '[]const u8'
        raylib.drawText(title, @intFromFloat(x + 5), @intFromFloat(y + 5), 14, raylib.Color.white);
                        ^~~~~
src\raylib_stub.zig:472:23: note: parameter type declared here
pub fn drawText(text: [*:0]const u8, posX: c_int, posY: c_int, fontSize: c_int, color: Color) void {
                      ^~~~~~~~~~~~~
src\property_inspector.zig:377:25: error: expected type '[*:0]const u8', found '[]const u8'
        raylib.drawText(name, @intFromFloat(x + 5), @intFromFloat(y + 5), 12, raylib.Color.gray);
                        ^~~~
src\raylib_stub.zig:472:23: note: parameter type declared here
pub fn drawText(text: [*:0]const u8, posX: c_int, posY: c_int, fontSize: c_int, color: Color) void {
                      ^~~~~~~~~~~~~
error: 8 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_editor --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\lib\\" --listen=-

Build Summary: 2/5 steps succeeded (1 failed)
install transitive failure
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 8 errors

error: the following build command failed with exit code 1:
.zig-cache\o\3b16da357b4d135e40ddce89d3397520\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib C:\Users\donald\nyon-game .zig-cache C:\Users\donald\AppData\Local\zig --seed 0x85e7264f -Z4e3ceb386a380d26
